[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/DifficultyMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/Theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/icon.png" type="Texture" id=3]

[sub_resource type="InputEventAction" id=1]
action = "ui_select"
pressed = true

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="DifficultyMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.054902, 0.458824, 0.454902, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
margin_left = 564.0
margin_top = 284.0
margin_right = 1356.0
margin_bottom = 796.0
custom_constants/separation = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="CenterContainer/HBoxContainer"]
margin_right = 512.0
margin_bottom = 512.0
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
margin_left = 592.0
margin_right = 792.0
margin_bottom = 512.0
rect_min_size = Vector2( 200, 0 )
custom_constants/separation = 16
alignment = 1

[node name="PlayButton" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 200.0
margin_bottom = 98.0
disabled = true
shortcut_in_tooltip = false
shortcut = SubResource( 2 )
text = "Play"

[node name="DifficultyButton" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 200.0
margin_bottom = 158.0
disabled = true
shortcut_in_tooltip = false
shortcut = SubResource( 2 )
text = "Difficulty"

[node name="EasyButton" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 174.0
margin_right = 200.0
margin_bottom = 218.0
shortcut_in_tooltip = false
shortcut = SubResource( 2 )
text = "Easy"

[node name="NormalButton" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 234.0
margin_right = 200.0
margin_bottom = 278.0
shortcut_in_tooltip = false
shortcut = SubResource( 2 )
text = "Normal"

[node name="HardButton" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 294.0
margin_right = 200.0
margin_bottom = 338.0
shortcut_in_tooltip = false
shortcut = SubResource( 2 )
text = "Hard"

[node name="AboutButton" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 354.0
margin_right = 200.0
margin_bottom = 398.0
disabled = true
text = "About"

[node name="ExitButton" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 414.0
margin_right = 200.0
margin_bottom = 458.0
disabled = true
text = "Exit"
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer/EasyButton" to="." method="_on_EasyButton_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer/NormalButton" to="." method="_on_NormalButton_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer/HardButton" to="." method="_on_HardButton_pressed"]
